# ward-rs

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml  rust.yml
assets/js/: index.js  setup.js
src/: config.rs  main.rs  models.rs  system.rs
