[package]
name = "ward-rs"
version = "0.0.6"
edition = "2024"

[dependencies]
askama = "0.15.6"
axum = "0.8.8"
clap = { version = "4.6.0", features = ["derive"] }
mime_guess = "2.0.5"
rust-embed = "8.11.0"
rust-ini = "0.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
tokio = { version = "1.51.1", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs", "trace", "set-header"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
